Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131832

qtmultimedia fails to build on yocto

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.2
    • 6.8
    • Multimedia
    • None
    • Linux/Yocto
    • b9942fe87 (6.8)
    • Multimedia wk 49-50

      With latest meta-qt6 submodule update in 6.8 branch, qtmultimedia fails build with following issues:

       

      agent:2024/11/28 16:53:25 build.go:404: | /home/qt/work/build/build/tmp/work/core2-64-poky-linux/qtmultimedia/6.8.2/git/src/plugins/multimedia/ffmpeg/qffmpegcodec.cpp:37:26: error: expected constructor, destructor, or type conversion before '(' token
      agent:2024/11/28 16:53:25 build.go:404: |    37 | Q_STATIC_LOGGING_CATEGORY(qLcFFmpegUtils, "qt.multimedia.ffmpeg.utils");
      agent:2024/11/28 16:53:25 build.go:404: |       |                          ^
      agent:2024/11/28 16:53:25 build.go:404: | In file included from /home/qt/work/build/build/tmp/work/core2-64-poky-linux/qtmultimedia/6.8.2/git/src/plugins/multimedia/ffmpeg/qffmpegcodec.cpp:6:
      agent:2024/11/28 16:53:25 build.go:404: | /home/qt/work/build/build/tmp/work/core2-64-poky-linux/qtmultimedia/6.8.2/git/src/plugins/multimedia/ffmpeg/qffmpegcodec.cpp: In function 'void QFFmpeg::{anonymous}::logGetCodecConfigError(const AVCodec*, AVCodecConfig, int)':
      agent:2024/11/28 16:53:25 build.go:404: | /home/qt/work/build/build/tmp/work/core2-64-poky-linux/qtmultimedia/6.8.2/git/src/plugins/multimedia/ffmpeg/qffmpegcodec.cpp:41:15: error: 'qLcFFmpegUtils' was not declared in this scope
      agent:2024/11/28 16:53:25 build.go:404: |    41 |     qCWarning(qLcFFmpegUtils) << "Failed to retrieve config" << config << "for codec" << codec->name
      agent:2024/11/28 16:53:25 build.go:404: |       |               ^~~~~~~~~~~~~~ 

       

      Full build log in testresults

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            timblechmann tim blechmann
            gronoff Mikko Gronoff
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes