ffmpeg: avoid Q_STATIC_LOGGING_CATEGORY on 6.8

Q_STATIC_LOGGING_CATEGORY is only in 6.9. for 6.8 we need to use static
Q_LOGGING_CATEGORY

Fixes: QTBUG-131832
Change-Id: I873a9da54f0a26693f448126ffe2a27c6a2e4565
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>